# Minari

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  PUBLISHING.md  README.md  hf-upload.py  index.html  metadata_test.py  objects.inv  pyproject.toml  searchindex.js  setup.py  test-gif.py  test.py  test_for_docs.py  tester.py
.github/ISSUE_TEMPLATE/: bug.md  proposal.md
.github/workflows/: build-docs-version.yml  build-docs.yml  build-publish.yml  build.yml  docs-test.yml  linux-tutorials-test-on-pr.yml  linux-tutorials-test.yml  manual-build-docs-version copy.yml  manual-build-docs-version.yml  manual-build-publish.yml  pre-commit.yml  test-integrations.yml
0.2.2/: .buildinfo
0.2.2/search/: index.html
0.3.0b/: index.html
0.3.0b/README/: index.html
0.3.0b/_modules/: index.html
0.3.0b/_static/: documentation_options.js
0.3.0b/search/: index.html
0.3.0b/tutorials/: index.html
README/: index.html
_downloads/33c142a2af8efe60072d187060d148e2/: IQL_torchrl.ipynb
_downloads/4309a2a5710b4a8d568d698c8b7a60be/: observation_space_subseting.ipynb
_downloads/433fbd4ad5e11d67afb6f95e0ee37d2b/: behavioral_cloning.py
_downloads/8392853af10481c4703c346afc6e6605/: custom_space_serialization.py
_downloads/92aa7a29195623bda8ca31d2e959f2a6/: behavioral_cloning.ipynb
_downloads/d242f1ed6ffcff2255fb7296630d75ca/: point_maze_dataset.py
_downloads/e07dbac5507bc55a4140a567f8213c9a/: point_maze_dataset.ipynb
_downloads/e848fd7cb68dc8286565925cb7c015d1/: custom_space_serialization.ipynb
_downloads/fedc25af3a1c2e1e2bafa18080b4aabb/: observation_space_subseting.py
_modules/: index.html
_static/: documentation_options.js
api/data_collector/: index.html
api/dataset_creation/: index.html
api/dataset_usage/: index.html
api/local_storage/: index.html
api/minari_functions/: index.html
api/remote_storage/: index.html
content/basic_usage/: index.html
content/dataset_standards/: index.html
content/minari_cli/: index.html
d4rl-generation/: .gitignore  README.md  convert_dataset.py  helpers.py  logged_experiment.py  requirements.txt  run_sac.py
datasets/D4RL/: index.html
datasets/atari/: index.html
datasets/door/: index.html
datasets/hammer/: index.html
datasets/kitchen/: index.html
datasets/minigrid/: index.html
datasets/mujoco/: index.html
datasets/pen/: index.html
datasets/pointmaze/: index.html
datasets/relocate/: index.html
docs/: .gitignore  README.md  conf.py  index.md  requirements.txt
docs/_scripts/: gen_community.py  gen_dataset_md.py  generate_env_table.py  generate_gif.py  md_utils.py
docs/api/: api.md  data_collector.md  dataset_creation.md  dataset_usage.md  local_storage.md  minari_cli.md  minari_dataset.md  minari_functions.md  remote_storage.md
docs/content/: basic_usage.md  dataset_format.md  dataset_standards.md  minari_cli.md
docs/datasets/: antmaze.md  coming_soon.md  door.md  external_dataset.md  hammer.md  kitchen.md  minigrid.md  pen.md  pointmaze.md  relocate.md
docs/release_notes/: index.md
docs/tutorials/: README.rst  behavioral_cloning.py  dataset_creation.md  dataset_usage.md  index.rst  q_learning_torch.py  requirements.txt
genindex/: index.html
kabuki/: __init__.py  dataset.pxd  dataset.pyi  dataset.pyx  hosting.py  logger.py
kabuki/hosting/: hosting.py
kabuki/storage/: datasets_root_dir.py  hosting.py  local.py
kabuki/utils/: assert_name_spec.py
main/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
main/README/: index.html
main/_modules/: index.html
main/_static/: documentation_options.js
main/genindex/: index.html
main/release_notes/: index.html
main/search/: index.html
main/tutorials/: index.html
minari/: __init__.py  cli.py  dataset.pxd  dataset.pyi  dataset.pyx  helpers.py  logger.py  minari_dataset.py  minari_storage.py  namespace.py  replay_buffer.py  serialization.py  utils.py
minari/data_collector/: __init__.py  data_collector.py  episode_buffer.py
minari/dataset/: episode_data.py  minari_dataset.py  minari_storage.py  step_data.py
minari/integrations/: hugging_face.py
minari/storage/: __init__.py  datasets_root_dir.py  hosting.py  local.py
minari/utils/: assert_name_spec.py  data_collector.py
minari/wrappers/: __init__.py  error.py
release_notes/: index.html
search/: index.html
tests/: common.py  conftest.py  test_cli.py  test_common.py  test_dataset_combine.py  test_dataset_creation.py  test_dataset_download.py  test_docs.py  test_jpeg_serialization.py  test_misc.py  test_namespace.py  test_namespace_remote.py  test_serialization.py  test_supported_dtypes.py
tests/DatasetCreation/: dataset_creation.py
tests/DatasetUsage/: dataset_usage.py
tests/LocalStorage/: local_storage.py
tests/data_collector/: test_data_collector.py
tests/dataset/: test_dataset_creation.py  test_dataset_download.py  test_minari_dataset.py  test_minari_storage.py
tests/integrations/: test_agile_rl.py  test_d3rlpy.py  test_hugging_face.py  test_torch_rl.py
tests/storage/: test_MinariStorage.py  test_minari_storage.py
tests/utils/: test_dataset_combine.py  test_dataset_creation.py  test_get_normalized_score.py
tutorials/: index.html
tutorials/DatasetCreation/: dataset_creation.py  requirements.txt
tutorials/DatasetUsage/: dataset_usage.py  requirements.txt
tutorials/LocalStorage/: local_storage.py  requirements.txt
tutorials/RemoteStorage/: remote_storage.py  requirements.txt
tutorials/basic_usage/: saving_to_mdpdataset.py
tutorials/dataset_creation/: index.html
tutorials/dataset_usage/: index.html
tutorials/downloading_and_uploading/: uploading_and_downloading_mdpdataset.py
v0.3.0/: searchindex.js
v0.3.1/: 404.html
v0.4.0/: .buildinfo  404.html  objects.inv
v0.4.1/: .buildinfo
v0.4.2/: .buildinfo
v0.4.3/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
v0.5.0/: 404.html  searchindex.js
v0.5.1/: .buildinfo  404.html  objects.inv  searchindex.js
v0.5.2/: .buildinfo  CNAME  index.html  objects.inv
v0.5.3/: 404.html  index.html  objects.inv
(+1623 files in other folders)
